COM-2600 Fixed button Alignment after new center align CSS

--- a/stylesheets/modules/b2b-account/account-address-search.less
+++ b/stylesheets/modules/b2b-account/account-address-search.less
@@ -68,4 +68,7 @@ display: inline-block !important;
 {
   margin-left: 2.5% !important;
 }
+.mz-button-footer {
+    text-align: end;
+}
 
